Music, Icon and continue scene

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,8 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/WildWest Project/Texture/Sprite/T_HealthIcon_EM_T.png.meta
+Assets/WildWest Project/Texture/Sprite/T_HealthIcon_EM_T.png
+Assets/WildWest Project/Texture/Sprite/T_HealthBar_EM_T.png.meta
+Assets/WildWest Project/Texture/Sprite/T_HealthBar_EM_T.png
+Assets/WildWest Project/Texture/Sprite.meta
